# modestproposalsBE

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: api.py  auth.py  coupons.py  proposal.py  user.py
app/core/: config.py
app/db/: base.py  base_class.py
app/db/migrations/versions/: c653db1ba640_.py  d7ea5e7e7b0e_.py  dd63dd821fc6_create_proposal_model.py  e7670c454b9b_.py  fe8aecd09555_.py
app/db/repositories/: base.py  proposal.py  user.py  users.py
app/db/tables/: proposal.py  user.py
app/models/schema/: proposal.py  proposal_schema.py  token_schema.py  user.py  user_schema.py
tests/app/api/routes/: test_user.py
